--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -26,4 +26,15 @@
   {{ template "_internal/google_analytics.html" . }}
   {{ template "_internal/opengraph.html" . }}
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@algolia/algoliasearch-netlify-frontend@1/dist/algoliasearchNetlify.css" />
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@algolia/algoliasearch-netlify-frontend@1/dist/algoliasearchNetlify.js"></script>
+<script type="text/javascript">
+  algoliasearchNetlify({
+    appId: '0S48WYHO7P',
+    apiKey: '5ab0a8678fab999a541732764afb7222',
+    siteId: '2ff2a7d3-5013-4db4-82b7-9208fe98415c',
+    branch: 'master',
+    selector: 'div#search',
+  });
+</script>
 </head>
