--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -31,7 +31,7 @@
 <script type="text/javascript">
   algoliasearchNetlify({
     appId: '0S48WYHO7P',
-    apiKey: `${process.env.API_KEY}`,
+    apiKey: '5ab0a8678fab999a541732764afb7222',
     siteId: '2ff2a7d3-5013-4db4-82b7-9208fe98415c',
     branch: 'master',
     selector: 'div#search',
